# paseboard

./: .gitignore  ARCHITECTURE.md  BUILD.md  CHANGELOG.md  CLAUDE.md  README.md  verify-build-config.sh
.github/workflows/: build.yml
.opencode/plans/: paseboard-5-features-office-hours.md
openspec/changes/add-secure-pairing/: design.md  proposal.md  tasks.md
openspec/changes/add-secure-pairing/specs/device-pairing/: spec.md
openspec/changes/add-security-encryption/: design.md  proposal.md  tasks.md
openspec/changes/add-security-encryption/specs/device-identity/: spec.md
openspec/changes/add-security-encryption/specs/encrypted-storage/: spec.md
openspec/changes/add-security-encryption/specs/encrypted-transport/: spec.md
openspec/changes/archive/2026-06-29-add-clear-history/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-29-fix-double-tray-icon/: design.md  proposal.md  tasks.md
openspec/changes/custom-device-name/: design.md  proposal.md  tasks.md
openspec/changes/custom-device-name/specs/custom-device-name/: spec.md
openspec/changes/fix-acl-clipboard-permission/: design.md  proposal.md  tasks.md
openspec/changes/fix-acl-clipboard-permission/specs/tauri-capabilities/: spec.md
openspec/changes/hide-dock-icon/: design.md  proposal.md  tasks.md
openspec/changes/history-search/: design.md  proposal.md  tasks.md
openspec/changes/paseboard-initial-implementation/: design.md  proposal.md  tasks.md
openspec/changes/settings-modal-column-visibility/: design.md  proposal.md  tasks.md
openspec/specs/history-clear/: spec.md
openspec/specs/tray-icon-config/: spec.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: generate.py  generate_tray.py  icon.icns
src-tauri/src/: app.rs  config.rs  lib.rs  main.rs
src-tauri/src/clipboard/: dedup.rs  mod.rs  monitor.rs  storage.rs  writer.rs
src-tauri/src/network/: crypto.rs  identity.rs  mdns.rs  message.rs  mod.rs  websocket_client.rs  websocket_common.rs  websocket_server.rs
src-tauri/src/utils/: console_logger.rs  error.rs  mod.rs
src-tauri/tests/: backward_compat_test.rs  deduplication_integration_test.rs  mdns_test.rs  websocket_integration_test.rs
ui/: index.html  package.json
(+13 files in other folders)
