[package]
name = "paseboard"
version = "0.2.0"
description = "跨平台局域网粘贴板同步工具"
authors = ["PaseBoard Team"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-clipboard-manager = "2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.0", features = ["full"] }
tokio-tungstenite = "0.21.0"
futures-util = "0.3.30"
mdns-sd = "0.7.5"
rusqlite = { version = "0.31.0", features = ["bundled-sqlcipher"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
sha2 = "0.10.8"
ed25519-dalek = { version = "2.1.1", features = ["pkcs8", "pem"] }
x25519-dalek = "2.0.1"
aes-gcm = "0.10.3"
hkdf = "0.12.4"
rand = "0.8.5"
base64 = "0.22.1"
thiserror = "1.0.50"
anyhow = "1.0.75"
log = "0.4.20"
env_logger = "0.11.0"
chrono = { version = "0.4.31", features = ["serde"] }
toml = "0.8.8"
dirs = "5.0.1"
hostname = "0.3.1"
arboard = "3.4"
get_if_addrs = "0.5.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "paseboard"
path = "src/lib.rs"

[[bin]]
name = "paseboard"
path = "src/main.rs"
